update and getAll (projects); docs updated
